Adds Nav (buttons)

--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
             <h1 class="title">Toboolist</h1>
         </div>
     </header>
+    <div id="background">
+
+             <!-- Nav bar -->
+            <div class="container">
+                <nav>
+                    <button class="nav-text blue">Add Task</button>
+                    <button class="nav-text white">Add Section</button>
+                </nav>
+
+            <!-- Main menù -->
+                <main>
+
+                </main>
+            </div>
+    </div>
 </body>
 </html>
