Adds Main (work in progress)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,38 @@
 
             <!-- Main menù -->
                 <main>
+                    <div class="space">
+                        <h2>&#9662 New Task</h2>
+                        <div class="main-text">&#10004; Quarterly Newsletter</div>
+                        <button class="button-task">Editorial</button>
+                    </div>
+                    <div class="space">
+                        <h2>&#9662 Today</h2>
+                        <div class="main-text">&#10004; Recruiting blog post</div>
+                        <button class="button-task">Editorial</button>
+                        <br>
+                        <div class="main-text">&#10004; Recruiting blog post</div>
+                        <button class="button-task">Editorial</button>
+                        <br>
+                        <div class="main-text">&#10008; Recruiting blog post</div>
+                        <button class="button-task">Editorial</button>
+                        <br>
+                        <div class="main-text">&#10004; Recruiting blog post</div>
+                        <button class="button-task">Editorial</button>
+                    </div>
+                    <div class="space">
+                        <h2>&#9662 Upcoming</h2>
+                        <div class="main-text">&#10008; Schedule meeting with Alex</div>
+                        <br>
+                        <div class="main-text">&#10004; Recruiting blog post</div>
+                        <button class="button-task">Editorial</button>
+                        <br>
+                        <div class="main-text">&#10004; Recruiting blog post</div>
+                        <button class="button-task">Editorial</button>
+                        <br>
+                        <div class="main-text">&#10004; Recruiting blog post</div>
+                        <button class="button-task">Editorial</button>
+                    </div>
 
                 </main>
             </div>
