Fixed Main menù in css

--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
                     <div class="space">
                         <h2>&#9662 New Task</h2>
                         <div class="main-text">&#10004; Quarterly Newsletter</div>
-                        <button class="button-task-Ed">Editorial</button>
+                        <button class="button-task Ed">Editorial</button>
                     </div>
                     <div class="space">
                         <h2>&#9662 Today</h2>
                         <div class="main-text">&#10004; Recruiting blog post</div>
-                        <button class="button-task-Ed">Editorial</button>
+                        <button class="button-task Ed">Editorial</button>
                         <br>
                         <div class="main-text">&#10004; Mobile app launch</div>
-                        <button class="button-task-Q1">Q1 Goals</button>
+                        <button class="button-task Q1">Q1 Goals</button>
                         <br>
                         <div class="main-text">&#10008; Intervew John H.</div>
-                        <button class="button-task-Re">Recruiting</button>
+                        <button class="button-task Re">Recruiting</button>
                         <br>
                         <div class="main-text">&#10004; Summit update to mobile storefronts</div>
-                        <button class="button-task-Mo">Mobile</button>
+                        <button class="button-task Mo">Mobile</button>
                     </div>
                     <div class="space">
                         <h2>&#9662 Upcoming</h2>
                         <div class="main-text">&#10008; Schedule meeting with Alex</div>
                         <br>
                         <div class="main-text">&#10004; Homepage refresh</div>
-                        <button class="button-task-Web">Website</button>
+                        <button class="button-task Web">Website</button>
                         <br>
                         <div class="main-text">&#10004; Onboard new Sales team members</div>
-                        <button class="button-task-Sal">Sales</button>
+                        <button class="button-task Sal">Sales</button>
                         <br>
                         <div class="main-text">&#10004; Review editorial calendar</div>
-                        <button class="button-task-Ed">Editorial</button>
+                        <button class="button-task Ed">Editorial</button>
                     </div>
 
                 </main>
