Adds and Fixed Main menù

--- a/index.html
+++ b/index.html
@@ -25,39 +25,38 @@
                 <!-- Main menù -->
                 <main>
 
-                    <div class="space">
+                    <div class="menu">
                         <h2>&#9662 New Task</h2>
-                        <div class="main-text">&#10004; Quarterly Newsletter</div>
-                        <button class="button-task Ed">Editorial</button>
+                        <div class="main-text"><span class="v">&#10004;</span> Quarterly Newsletter</div>
+                        <button class="button-task lightblue">Editorial</button>
                     </div>
-                    <div class="space">
+                    <div class="menu">
                         <h2>&#9662 Today</h2>
-                        <div class="main-text">&#10004; Recruiting blog post</div>
-                        <button class="button-task Ed">Editorial</button>
+                        <div class="main-text"><span class="v">&#10004;</span> Recruiting blog post</div>
+                        <button class="button-task lightblue">Editorial</button>
                         <br>
-                        <div class="main-text">&#10004; Mobile app launch</div>
-                        <button class="button-task Q1">Q1 Goals</button>
+                        <div class="main-text"><span class="v">&#10004;</span> Mobile app launch</div>
+                        <button class="button-task purple">Q1 Goals</button>
                         <br>
-                        <div class="main-text">&#10008; Intervew John H.</div>
-                        <button class="button-task Re">Recruiting</button>
+                        <div class="main-text"><span class="x">&#10008;</span> Intervew John H.</div>
+                        <button class="button-task green">Recruiting</button>
                         <br>
-                        <div class="main-text">&#10004; Summit update to mobile storefronts</div>
-                        <button class="button-task Mo">Mobile</button>
+                        <div class="main-text"><span class="v">&#10004;</span> Summit update to mobile storefronts</div>
+                        <button class="button-task orange">Mobile</button>
                     </div>
-                    <div class="space">
+                    <div class="menu">
                         <h2>&#9662 Upcoming</h2>
-                        <div class="main-text">&#10008; Schedule meeting with Alex</div>
+                        <div class="main-text"><span class="x">&#10008;</span> Schedule meeting with Alex</div>
                         <br>
-                        <div class="main-text">&#10004; Homepage refresh</div>
-                        <button class="button-task Web">Website</button>
+                        <div class="main-text"><span class="v">&#10004;</span> Homepage refresh</div>
+                        <button class="button-task fuchsia">Website</button>
                         <br>
-                        <div class="main-text">&#10004; Onboard new Sales team members</div>
-                        <button class="button-task Sal">Sales</button>
+                        <div class="main-text"><span class="v">&#10004;</span> Onboard new Sales team members</div>
+                        <button class="button-task lightgreen">Sales</button>
                         <br>
-                        <div class="main-text">&#10004; Review editorial calendar</div>
-                        <button class="button-task Ed">Editorial</button>
+                        <div class="main-text"><span class="v">&#10004;</span> Review editorial calendar</div>
+                        <button class="button-task lightblue">Editorial</button>
                     </div>
-
                 </main>
             </div>
     </div>
