Fixed Main menu

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="main-text"><span class="v">&#10004;</span> Summit update to mobile storefronts</div>
                         <button class="button-task orange">Mobile</button>
                     </div>
-                    <div class="menu">
+                    <div class="menu lastmargin">
                         <h2>&#9662 Upcoming</h2>
                         <div class="main-text"><span class="x">&#10008;</span> Schedule meeting with Alex</div>
                         <br>
